--- a/p2/pagina2.html
+++ b/p2/pagina2.html
@@ -18,7 +18,7 @@
     <section>
         <main>
             <div id="esquerda">
-                <img src="sorriso efeito.jpeg" alt="foto">
+                <img src="Sorriso efeito.jpeg" alt="foto">
                 <img src="Pregsamara.jpeg" alt="nós">
                 <!-- <img src="https://th.bing.com/th/id/R.a98bd3b7e6042d76a0fe236e15ef88d2?rik=iwMiJNeeQn75Eg&pid=ImgRaw&r=0" alt=""> -->
                 <img src="Desenho.jpeg" alt="Desenho das flores">
